<<<<<<< Updated upstream
[gd_scene load_steps=4 format=3 uid="uid://drkasna4qn60x"]

[ext_resource type="Script" uid="uid://cgy7bxwwl48it" path="res://scripts/main.gd" id="1_wpru5"]
[ext_resource type="PackedScene" uid="uid://c0pgv7ggiugus" path="res://scenes/enscreen.tscn" id="2_rs6on"]
[ext_resource type="PackedScene" uid="uid://oqnnipgr0i6k" path="res://scenes/timedEventTemplate.tscn" id="4_rm1js"]
=======
[gd_scene load_steps=5 format=4 uid="uid://bp6e8m5qnxhh4"]

[ext_resource type="Script" uid="uid://cgy7bxwwl48it" path="res://scripts/main.gd" id="1_wpru5"]
[ext_resource type="PackedScene" path="res://scenes/enscreen.tscn" id="2_rs6on"]
[ext_resource type="PackedScene" uid="uid://bg8oxx3egpbll" path="res://assets/Placeholder tiles.tscn" id="3_rm1js"]
[ext_resource type="PackedScene" uid="uid://cpdxvv6v82dfx" path="res://assets/Sasha.tscn" id="4_rm1js"]
>>>>>>> Stashed changes

[node name="Dev" type="Node2D"]
script = ExtResource("1_wpru5")
endscreen = ExtResource("2_rs6on")

[node name="TimedEvent" parent="." instance=ExtResource("4_rm1js")]
visible = false
offset_left = 20.0
offset_top = 15.0
offset_right = 20.0
offset_bottom = 15.0
triggerTime = 1
dialogText = "Hi there"

<<<<<<< Updated upstream
[connection signal="negative_choice_chosen" from="TimedEvent" to="." method="_on_negative_choice_choosen"]
[connection signal="positive_choice_chosen" from="TimedEvent" to="." method="_on_positive_choice_chosen"]
=======
[node name="TileMapLayer" parent="." instance=ExtResource("3_rm1js")]
show_behind_parent = true
tile_map_data = PackedByteArray("AAAAAAAAAAAJAAEAAAAAAAEAAAAOAAgAAAAAAAIAAAAOAAgAAAAAAAMAAAAOAAgAAAAAAAQAAAAOAAgAAAAAAAUAAAAOAAgAAAAAAAYAAAAOAAgAAAAAAAcAAAAOAAgAAAAAAAgAAAAOAAgAAAAAAAkAAAAOAAgAAAABAAAAAAAOAAgAAAABAAEAAAAJAAEAAAABAAIAAAAJAAEAAAABAAMAAAAJAAEAAAABAAQAAAAJAAEAAAABAAUAAAAJAAEAAAABAAYAAAAJAAEAAAABAAcAAAAJAAEAAAABAAgAAAAJAAEAAAABAAkAAAAOAAgAAAACAAAAAAAOAAgAAAACAAEAAAAJAAEAAAACAAIAAAAJAAEAAAACAAMAAAAJAAEAAAACAAQAAAAJAAEAAAACAAUAAAAJAAEAAAACAAYAAAAJAAEAAAACAAcAAAAJAAEAAAACAAgAAAAJAAEAAAACAAkAAAAOAAgAAAADAAAAAAAOAAgAAAADAAEAAAAJAAEAAAADAAIAAAAJAAEAAAADAAMAAAAJAAEAAAADAAQAAAAJAAEAAAADAAUAAAAJAAEAAAADAAYAAAAJAAEAAAADAAcAAAAJAAEAAAADAAgAAAAJAAEAAAADAAkAAAAOAAgAAAAEAAAAAAAOAAgAAAAEAAEAAAAJAAEAAAAEAAIAAAAJAAEAAAAEAAMAAAAJAAEAAAAEAAQAAAAJAAEAAAAEAAUAAAAJAAEAAAAEAAYAAAAJAAEAAAAEAAcAAAAJAAEAAAAEAAgAAAAJAAEAAAAEAAkAAAAOAAgAAAAFAAAAAAAOAAgAAAAFAAEAAAAJAAEAAAAFAAIAAAAJAAEAAAAFAAMAAAAJAAEAAAAFAAQAAAAJAAEAAAAFAAUAAAAJAAEAAAAFAAYAAAAJAAEAAAAFAAcAAAAJAAEAAAAFAAgAAAAJAAEAAAAFAAkAAAAOAAgAAAAGAAAAAAAOAAgAAAAGAAEAAAAJAAEAAAAGAAIAAAAJAAEAAAAGAAMAAAAJAAEAAAAGAAQAAAAJAAEAAAAGAAUAAAAJAAEAAAAGAAYAAAAJAAEAAAAGAAcAAAAJAAEAAAAGAAgAAAAJAAEAAAAGAAkAAAAOAAgAAAAHAAEAAAAJAAEAAAAHAAIAAAAJAAEAAAAHAAMAAAAJAAEAAAAHAAQAAAAJAAEAAAAHAAUAAAAJAAEAAAAHAAYAAAAJAAEAAAAHAAcAAAAJAAEAAAAHAAgAAAAJAAEAAAAHAAkAAAAOAAgAAAAIAAAAAAAOAAgAAAAIAAEAAAAJAAEAAAAIAAIAAAAJAAEAAAAIAAMAAAAJAAEAAAAIAAQAAAAJAAEAAAAIAAUAAAAJAAEAAAAIAAYAAAAJAAEAAAAIAAcAAAAJAAEAAAAIAAgAAAAJAAEAAAAIAAkAAAAOAAgAAAAJAAAAAAAOAAgAAAAJAAEAAAAJAAEAAAAJAAIAAAAJAAEAAAAJAAMAAAAJAAEAAAAJAAQAAAAJAAEAAAAJAAUAAAAJAAEAAAAJAAYAAAAJAAEAAAAJAAcAAAAJAAEAAAAJAAgAAAAJAAEAAAAJAAkAAAAOAAgAAAAKAAAAAAAOAAgAAAAKAAEAAAAJAAEAAAAKAAIAAAAJAAEAAAAKAAMAAAAJAAEAAAAKAAQAAAAJAAEAAAAKAAUAAAAJAAEAAAAKAAYAAAAJAAEAAAAKAAcAAAAJAAEAAAAKAAgAAAAJAAEAAAAKAAkAAAAOAAgAAAALAAAAAAAOAAgAAAALAAEAAAAJAAEAAAALAAIAAAAJAAEAAAALAAMAAAAJAAEAAAALAAQAAAAJAAEAAAALAAUAAAAJAAEAAAALAAYAAAAJAAEAAAALAAcAAAAJAAEAAAALAAgAAAAJAAEAAAALAAkAAAAOAAgAAAAMAAAAAAAOAAgAAAAMAAEAAAAJAAEAAAAMAAIAAAAJAAEAAAAMAAMAAAAJAAEAAAAMAAQAAAAJAAEAAAAMAAUAAAAJAAEAAAAMAAYAAAAJAAEAAAAMAAcAAAAJAAEAAAAMAAgAAAAJAAEAAAAMAAkAAAAOAAgAAAANAAAAAAAOAAgAAAANAAEAAAAJAAEAAAANAAIAAAAJAAEAAAANAAMAAAAJAAEAAAANAAQAAAAJAAEAAAANAAUAAAAJAAEAAAANAAYAAAAJAAEAAAANAAcAAAAJAAEAAAANAAgAAAAJAAEAAAANAAkAAAAOAAgAAAAOAAAAAAAOAAgAAAAOAAEAAAAJAAEAAAAOAAIAAAAJAAEAAAAOAAMAAAAJAAEAAAAOAAQAAAAJAAEAAAAOAAUAAAAJAAEAAAAOAAYAAAAJAAEAAAAOAAcAAAAJAAEAAAAOAAgAAAAJAAEAAAAOAAkAAAAOAAgAAAAPAAAAAAAOAAgAAAAPAAEAAAAJAAEAAAAPAAIAAAAJAAEAAAAPAAMAAAAJAAEAAAAPAAQAAAAJAAEAAAAPAAUAAAAJAAEAAAAPAAYAAAAJAAEAAAAPAAcAAAAJAAEAAAAPAAgAAAAJAAEAAAAPAAkAAAAOAAgAAAAQAAAAAAAOAAgAAAAQAAEAAAAJAAEAAAAQAAIAAAAJAAEAAAAQAAMAAAAJAAEAAAAQAAQAAAAJAAEAAAAQAAUAAAAJAAEAAAAQAAYAAAAJAAEAAAAQAAcAAAAJAAEAAAAQAAgAAAAJAAEAAAAQAAkAAAAOAAgAAAARAAAAAAAOAAgAAAARAAEAAAAJAAEAAAARAAIAAAAJAAEAAAARAAMAAAAJAAEAAAARAAQAAAAJAAEAAAARAAUAAAAJAAEAAAARAAYAAAAJAAEAAAARAAcAAAAJAAEAAAARAAgAAAAJAAEAAAARAAkAAAAOAAgAAAASAAAAAAAOAAgAAAASAAEAAAAJAAEAAAASAAIAAAAJAAEAAAASAAMAAAAJAAEAAAASAAQAAAAJAAEAAAASAAUAAAAJAAEAAAASAAYAAAAJAAEAAAASAAcAAAAJAAEAAAASAAgAAAAJAAEAAAASAAkAAAAOAAgAAAATAAAAAAAOAAgAAAATAAEAAAAJAAEAAAATAAIAAAAJAAEAAAATAAMAAAAJAAEAAAATAAQAAAAJAAEAAAATAAUAAAAJAAEAAAATAAYAAAAJAAEAAAATAAcAAAAJAAEAAAATAAgAAAAJAAEAAAATAAkAAAAOAAgAAAAUAAAAAAAOAAgAAAAUAAEAAAAOAAgAAAAUAAIAAAAOAAgAAAAUAAMAAAAOAAgAAAAUAAQAAAAOAAgAAAAUAAUAAAAOAAgAAAAUAAYAAAAOAAgAAAAUAAcAAAAOAAgAAAAUAAgAAAAOAAgAAAAUAAkAAAAOAAgAAAA=")

[node name="Sasha" parent="." instance=ExtResource("4_rm1js")]
position = Vector2(156, 85)

[connection signal="timeout" from="GameTime" to="." method="_on_game_time_timeout"]
>>>>>>> Stashed changes
